--- a/Report.ipynb
+++ b/Report.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,22 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Reading in the data.\n",
-    "q1_2017 = pd.read_csv(\"Bikeshare Ridership (2017 Q1).csv\")\n",
-    "q2_2017 = pd.read_csv(\"Bikeshare Ridership (2017 Q2).csv\")\n",
-    "q3_2017 = pd.read_csv(\"Bikeshare Ridership (2017 Q3).csv\")\n",
-    "q4_2017 = pd.read_csv(\"Bikeshare Ridership (2017 Q4).csv\")\n",
-    "q3_2016 = pd.read_excel(\"bikeshare-ridership-2016-q3.xlsx\")\n",
-    "q4_2016 = pd.read_excel(\"bikeshare-ridership-2016-q4.xlsx\")"
+    "q1_2017 = pd.read_csv(\"Data/Bikeshare Ridership (2017 Q1).csv\")\n",
+    "q2_2017 = pd.read_csv(\"Data/Bikeshare Ridership (2017 Q2).csv\")\n",
+    "q3_2017 = pd.read_csv(\"Data/Bikeshare Ridership (2017 Q3).csv\")\n",
+    "q4_2017 = pd.read_csv(\"Data/Bikeshare Ridership (2017 Q4).csv\")\n",
+    "q3_2016 = pd.read_excel(\"Data/bikeshare-ridership-2016-q3.xlsx\")\n",
+    "q4_2016 = pd.read_excel(\"Data/bikeshare-ridership-2016-q4.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "4  University Ave / Gerrard St W    Member  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
    "outputs": [],
    "source": [
     "# Read in the data\n",
-    "stations = pd.read_json('station_information.json')['data'][0]\n",
+    "stations = pd.read_json('Data/station_information.json')['data'][0]\n",
     "\n",
     "# Create dictionary mapping station names to their latitude and longitude,\n",
     "# this will be used as a lookup dictionary\n",
